fixed horizontal scrollbar

--- a/src/styles/blocks/materials.scss
+++ b/src/styles/blocks/materials.scss
@@ -18,9 +18,14 @@
 
   &__top {
     position: absolute;
-    top: -60px;
+    top: -40px;
+
     @include onMobile {
       top: -100px;
+    }
+
+    @include onTablet {
+      top: -70px;
     }
   }
 
@@ -229,7 +234,7 @@
 
       @include onTablet {
         margin-bottom: 20px;
-        transform: translateX(-55%);
+        transform: translateX(-56%);
       }
     }
 
@@ -240,7 +245,6 @@
 
       @include onTablet {
         margin-top: 9px;
-        transform: translateX(-40%);
         padding: 35px 45px;
       }
     }
