--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -13,13 +13,13 @@
 }
 
 @mixin onMobile {
-  @media (min-width: 320px) and (max-width: 767px) {
+  @media (min-width: 320px) and (max-width: 768px) {
     @content;
   }
 }
 
 @mixin onTablet {
-  @media (min-width: 768px) and (max-width: 1199px) {
+  @media (min-width: 768px) and (max-width: 1200px) {
     @content;
   }
 }
@@ -31,7 +31,7 @@
 }
 
 @mixin onMobileAndTablet {
-  @media (min-width: 320px) and (max-width: 1199px) {
+  @media (min-width: 320px) and (max-width: 1200px) {
     @content;
   }
 }
